# DBCFileViewer

./: .dockerignore  .gitattributes  .gitignore  .qmlls.ini  .readthedocs.yaml  AddMessageDialog.qml  AddSignalDialog.qml  BUILD_QUICK_START.md  BitEditor.qml  CMakeLists.txt  CMakeLists_linux.txt  CMakeListsold.txt  CODE_SIGNING.md  CODE_SIGNING_SETUP.md  CSS-Electronics-ISOBUS-demo.dbc  DBCFileViewer.qmlproject  DBCFileViewer.qmlproject.qtds  DBCFileViewer.qmlproject.qtds.11373c2  DBCFileViewer.qmlproject.qtds.535536c  DBCFileViewer.qmlproject.user.218fe57  DBCFileViewer.qmlproject.user.be2053c  DBC_Parser_linux.pro  DEPLOYMENT.md  DEPLOYMENT_MACOS.md  DEPLOYMENT_QUICK_REF.md  DISTRIBUTION.md  DOCKER_README.md  DOCKER_SIZE_OPTIMIZATION.md  DOCKER_WSL_GUI.md  DbcParser.cpp  DbcParser.cpp.backup  DbcParser.h  DbcSender.cpp  DbcSender.h  Dockerfile  Dockerfile.alpine-qt-source  Dockerfile.linux  Dockerfile.windows  InstallationGuide.md  LICENSE  (+51 more)
.devcontainer/: Dockerfile  Dockerfile.linux  Dockerfile.old  Dockerfile.previous  Dockerfile.windows  Dockerfileno  devcontainer.json  devcontainer.windows.json  devcontainerno.json  test-display.sh
.github/workflows/: build-releases.yml  release-signed.yml
DBCClient/: LICENSE  Qtclient.cpp  Qtclient.h  README  cansend test scenario.txt  client  client.cpp  receiver  server.conf  server.cpp  test_integration.cpp  test_server.cpp
DBCFileViewer/: Constants.qml  EventListSimulator.qml  qmldir
DBCFileViewer/designer/: plugin.metainfo
DBCFileViewerContent/: App.qml  Screen01.qml  Screen01.ui.qml
cmake/: mingw-w64-x86_64.cmake
debian/: changelog  control  dbc-file-viewer.desktop  rules
deploy-assets/: com.qtdevs.DBCParser.appdata.xml  com.qtdevs.DBCParser.xml  dbc-parser.desktop
docker/: build-dev.sh  run-dev-linux.sh  run-dev-windows.ps1
obs/: COMPLETE_FIX_GUIDE.md  README.md  _service  create-debian-tarball.sh  dbc-file-viewer.dsc  dbc-file-viewer.spec  debian._service  debian.changelog  debian.control  debian.dbc-file-viewer.desktop  debian.rules  pkg_meta.xml
scripts/: build-all-releases.ps1  build-all.sh  build-flatpak.sh  build-installer-macos.sh  build-installer.ps1  build-windows.ps1  deploy-macos.sh  deploy-windows.ps1  run-docker-gui.ps1  run-docker-mac-simple.sh  run-docker-mac.sh  run-docker-windows.ps1  run-docker-wslg.ps1  run-docker.ps1  run-with-host-display.sh  sign-windows.ps1
